--- a/week-1/hemminger-diagrams.html
+++ b/week-1/hemminger-diagrams.html
@@ -35,6 +35,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Diagrams<span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../web-420/hemminger-rest.html">Presentations</a>
+                </li>
               </ul>
                 <a target="_blank" href="https://github.com/arhemminger">
                   <img class="btn btn-outline-secondary my-2 my-sm-0" src="../images/GitHubIcon.png" alt="GitHub Icon">
