--- a/week-2/hemminger-diagrams.html
+++ b/week-2/hemminger-diagrams.html
@@ -4,7 +4,7 @@
 ; Author: Professor Krasso
 ; Date:  12 May 2019
 ; Modified by: Andrew Hemminger
-; Description: Exercise 2.2 – NodeShopper
+; Description: Exercise 2.3 – NodeTech ORD
 ;===========================================
 -->
 <!DOCTYPE html>
@@ -71,6 +71,15 @@
         </div>
         <div class="col">
           <img src="../nosql-data-diagrams/exercise2_2_NodeShopper_data_diagram.PNG" class="rounded float-right h-100 w-100" alt="NodeShopper data diagram" id="ndd2_2"/>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col">
+          <img src="../nosql-data-diagrams/exercise2_3_NodeTech_ORD.jpg" class="rounded float-left w-100 h-75" alt="NodeTech ORD" id="ord2_3"/>
+        </div>
+        <div class="col">
+          <img src="../nosql-data-diagrams/exercise2_3_NodeTech_data_diagram.PNG" class="rounded float-right w-100 h-75" alt="NodeTech data diagram" id="ndd2_3"/>
         </div>
       </div>
     </div>
